css/custom.css
@media (max-width: 767px) {
  #searchBtn {
    width: 100%;
    margin-top: 10px;
  }
  #locationBtn {
    width: 100%;
  }
}

@media (min-width: 768px) {
  .search-col {
    padding-right: 0;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  .alert-col {
    padding-right: 0;
  }
}

@media (min-width: 992px) {
  #searchBtn {
    width: 100%;
  }
}

#resultsList, #recentSearchesList {
  margin-top: 20px;
}

.container {
  margin-bottom: 20px;
}

.my-location-section, .alert-section, .results-section {
  margin-top: 10px;
}

.city-state-heading {
  color: #7F8C8D;
}

.btn-location {
  background-color: #95A5A6;
  color: #fff;
}

.modal-body {
  overflow-x: auto;
}

.modal-field {
  margin-right: 10px;
}

.modal-hours-open {
  font-size: 0.9em;
}

.modal-hours-open li strong {
  margin-right: 10px;
}

.modal-distance-info {
  font-size: 0.9em;
}

.modal-distance-info li strong {
  margin-right: 10px;
}

/* Current day in modal */

.current-day span {
  color: #fff;
  background-color: #1ABC9C;
  padding: 5px;
}

/* Bootstrap Overrides */

.badge {
  margin-top: 6px;
  background-color: #415b76;
}

.alert-success {
  background-color: #16A085;
  color: #fff;
}

.alert-danger {
  background-color: #C0392B;
  color: #fff;
}

.alert-info {
  background-color: #2980B9;
  color: #fff;
}

